--- a/about.html
+++ b/about.html
@@ -8,54 +8,50 @@
     <title>About Sustainabilitea</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+
   </head>
 
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color:rgb(254, 242, 239);">
-  <a class="navbar-brand" href="#">Sustainabilitea</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">ABOUT US</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">FAST FASHION</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">FIND BRANDS</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+
+  	<!--header-end-->
+  	<nav class="main-nav-outer" id="test">
+  		<!--main-nav-start-->
+  		<div class="container">
+  			<ul class="main-nav">
+  				<li><a href="#header">Home</a></li>
+  				<li><a href="#fastfashion">About</a></li>
+  				<li><a href="#service">Fast Fashion?</a></li>
+  				<li class="small-logo"><a href="#header"><img src="https://github.com/deslyntka/group_project/blob/master/SUSTAINABILITEA.png?raw=true" alt="" width="75" height="75"></a></li>
+  				<li><a href="#effects">Sustainable Fashion</a></li>
+  				<li><a href="#team">Find Brands</a></li>
+  				<li><a href="#contact">Contact</a></li>
+  			</ul>
+  			<a class="res-nav_click" href="#"><i class="fa fa-bars"></i></a>
+  		</div>
+  	</nav>
 
 
 <div class="container-fluid scroll">
 
-    <h1>About Us</h1>
+
 <br>
 <div class="container">
-  <div class="row">
-    <div class="col align-self-start">
-      <h2>Who We Are</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae turpis massa sed elementum tempus egestas. Sed viverra tellus in hac habitasse platea dictumst. Amet mauris commodo quis imperdiet. Viverra mauris in aliquam sem. Libero volutpat sed cras ornare. Eleifend donec pretium vulputate sapien nec. Ornare lectus sit amet est placerat in. Tellus rutrum tellus pellentesque eu. In nibh mauris cursus mattis. Duis at consectetur lorem donec massa sapien faucibus. Suspendisse sed nisi lacus sed viverra tellus in hac.</p>
+  <div class="row align-items-start">
+    <div class="col">
+      <h1>Who We Are</h1>
+      <p>We are Alice, Deslyn and Rachael and as consumers of fashion, we have become conscious about the impact that our choices can have on the environment. For this reason, we have set up SUSTAINABILITEA, a platform that is committed to spilling the tea on the fast fashion industry. </p>
     </div>
-    <div class="col align-self-center">
-      <h2>What We Do</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae turpis massa sed elementum tempus egestas. Sed viverra tellus in hac habitasse platea dictumst. Amet mauris commodo quis imperdiet. Viverra mauris in aliquam sem. Libero volutpat sed cras ornare. Eleifend donec pretium vulputate sapien nec. Ornare lectus sit amet est placerat in. Tellus rutrum tellus pellentesque eu. In nibh mauris cursus mattis. Duis at consectetur lorem donec massa sapien faucibus. Suspendisse sed nisi lacus sed viverra tellus in hac.</p>
+    <div class="col">
+      <h1>What We Do</h1>
+      <p>We are committed to making sure that everyone has the information they need to make an informed decision about the brands that they buy.  Not only do we spill the true tea on what fast fashion is doing to our planet, we also keep you informed on the best sustainable brands to ensure that you don’t need to compromise your personal style.
+</p>
     </div>
-    <div class="col align-self-end">
-      <h2>Why We Do It</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae turpis massa sed elementum tempus egestas. Sed viverra tellus in hac habitasse platea dictumst. Amet mauris commodo quis imperdiet. Viverra mauris in aliquam sem. Libero volutpat sed cras ornare. Eleifend donec pretium vulputate sapien nec. Ornare lectus sit amet est placerat in. Tellus rutrum tellus pellentesque eu. In nibh mauris cursus mattis. Duis at consectetur lorem donec massa sapien faucibus. Suspendisse sed nisi lacus sed viverra tellus in hac.</p>
+    <div class="col">
+      <h1>Why We Do It</h1>
+      <p>To put it plainly, our planet is suffering and there is no planet B! We just want to do our part to help make consumers, like ourselves, aware about things we can do to improve our current climate situation. </p>
     </div>
   </div>
-</div>
 
 </div>
   </body>
