--- a/findbrands.html
+++ b/findbrands.html
@@ -1,49 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, maximum-scale=1">
 
-  <title>Find Brands</title>
+	<title>Find Brands</title>
+	<link rel="icon" href="https://github.com/deslyntka/group_project/blob/master/SUSTAINABILITEA.png?raw=true" type="url">
+	<link rel="shortcut icon" href="https://github.com/deslyntka/group_project/blob/master/SUSTAINABILITEA.png?raw=true" type="url">
 
-  <!-- CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="css/nivo-lightbox.css" rel="stylesheet" />
-  <link href="css/nivo-lightbox-theme/default/default.css" rel="stylesheet" type="text/css" />
-  <link href="css/owl.carousel.css" rel="stylesheet" media="screen" />
-  <link href="css/owl.theme.css" rel="stylesheet" media="screen" />
-  <link href="css/animate.css" rel="stylesheet" />
-  <link href="css/style.css" rel="stylesheet">
-  <link href="color/default.css" rel="stylesheet">
-  <!-- =======================================================
-    Theme Name: Lonely
-    Theme URL: https://bootstrapmade.com/free-html-bootstrap-template-lonely/
-    Author: BootstrapMade
-    Author URL: https://bootstrapmade.com
-  ======================================================= -->
+	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,800italic,700italic,600italic,400italic,300italic,800,700,600' rel='stylesheet' type='text/css'>
 
+	<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+	<link href="css/style.css" rel="stylesheet" type="text/css">
+	<link href="css/font-awesome.css" rel="stylesheet" type="text/css">
+	<link href="css/responsive.css" rel="stylesheet" type="text/css">
+	<link href="css/magnific-popup.css" rel="stylesheet" type="text/css">
+	<link href="css/animate.css" rel="stylesheet" type="text/css">
 
-        <img src=img\findbrands.png  </a>
-
-    <div class="page-scroll">
-      <a href="#about">
-				<i class="fa fa-angle-down fa-5x animated"></i>
-			</a>
-    </div>
-  </section>
+	<script type="text/javascript" src="js/jquery.1.8.3.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.js"></script>
+	<script type="text/javascript" src="js/jquery-scrolltofixed.js"></script>
+	<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
+	<script type="text/javascript" src="js/jquery.isotope.js"></script>
+	<script type="text/javascript" src="js/wow.js"></script>
+	<script type="text/javascript" src="js/classie.js"></script>
+	<script type="text/javascript" src="js/magnific-popup.js"></script>
 
 
-          </div>
-        </div>
-      </div>
-      <!-- /.container -->
-    </nav>
+
+</head>
+
+<nav class="main-nav-outer" id="test">
+  <!--main-nav-start-->
+  <div class="container">
+    <ul class="main-nav">
+      <li><a href="file:///Users/rachaelwhite/Downloads/Knight%203/index.html">Home</a></li>
+      <li><a href="file:///Users/rachaelwhite/Downloads/Knight%203/about.html">About</a></li>
+      <li><a href="#fastfashion">Fast Fashion?</a></li>
+      <li class="small-logo"><a href="#header"><img src="https://github.com/deslyntka/group_project/blob/master/SUSTAINABILITEA.png?raw=true" alt="" width="75" height="75"></a></li>
+      <li><a href="#team">Sustainable Fashion</a></li>
+      <li><a href="file:///Users/rachaelwhite/Downloads/Knight%203/findbrands.html">Find Brands</a></li>
+    </ul>
+    <a class="res-nav_click" href="#"><i class="fa fa-bars"></i></a>
   </div>
-  <!-- /Navigation -->
+</nav>
 
   <!-- Section: about -->
   <section id="about" class="home-section">
@@ -66,7 +68,7 @@
       <div class="row">
         <div class="col-md-6">
 
-          <img src="img/talaa.png" class="img-responsive img-rounded" alt="" />
+          <img src="https://github.com/deslyntka/group_project/blob/master/talaa.png?raw=true" class="img-responsive img-rounded" alt="" />
         </div>
         <div class="col-md-6">
           <p><strong>T A L A</strong></p>
@@ -82,17 +84,14 @@
     </div>
   </section>
 
-<section
+<section>
 
-
-
-</section>
 
   <div class="container">
     <div class="row">
       <div class="col-md-6">
 
-        <img src="img/patagonia.jpg" class="img-responsive img-rounded" alt="" />
+        <img src="https://github.com/deslyntka/group_project/blob/master/patagonia.jpg?raw=true" class="img-responsive img-rounded" alt="" />
       </div>
       <div class="col-md-6">
         <p><strong>P A T A G O N I A</strong></p>
@@ -111,19 +110,11 @@
 
 <section>
 
-
-
-
-
-</section>
-
-
-
 <div class="container">
   <div class="row">
     <div class="col-md-6">
 
-      <img src="img/bite.jpg.png" class="img-responsive img-rounded" alt="" />
+      <img src="https://github.com/deslyntka/group_project/blob/master/bite.jpg.png?raw=true" class="img-responsive img-rounded" alt="" />
     </div>
     <div class="col-md-6">
       <p><strong>B I T E</strong></p>
@@ -143,12 +134,12 @@ Originated in Stockholm, the brand centralises around their combined passion for
 
 
 
-
+<section>
   <div class="container">
     <div class="row">
       <div class="col-md-6">
 
-        <img src="img/pact.png" class="img-responsive img-rounded" alt="" />
+        <img src="https://github.com/deslyntka/group_project/blob/master/pact.png?raw=true" class="img-responsive img-rounded" alt="" />
       </div>
       <div class="col-md-6">
         <p><strong>P A C T</strong></p>
@@ -165,12 +156,12 @@ For a more affordable brand but with the same values, Pact is the perfect option
 </section>
 
 
-
+<section>
   <div class="container">
     <div class="row">
       <div class="col-md-6">
 
-        <img src="img/komodo.png" class="img-responsive img-rounded" alt="" />
+        <img src="https://github.com/deslyntka/group_project/blob/master/komodo.png?raw=true" class="img-responsive img-rounded" alt="" />
       </div>
       <div class="col-md-6">
         <p><strong>K O M O D O</strong></p>
@@ -189,20 +180,100 @@ For a more affordable brand but with the same values, Pact is the perfect option
 
 
 >
+<script type="text/javascript">
+  $(document).ready(function(e) {
 
-  <!-- Core JavaScript Files -->
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/jquery.easing.min.js"></script>
-  <script src="js/jquery.sticky.js"></script>
-  <script src="js/jquery.scrollTo.js"></script>
-  <script src="js/stellar.js"></script>
-  <script src="js/wow.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/nivo-lightbox.min.js"></script>
-  <!-- Custom Theme JavaScript -->
-  <script src="js/custom.js"></script>
-  <script src="contactform/contactform.js"></script>
+    $('#test').scrollToFixed();
+    $('.res-nav_click').click(function() {
+      $('.main-nav').slideToggle();
+      return false
+
+    });
+
+    $('.Portfolio-box').magnificPopup({
+      delegate: 'a',
+      type: 'image'
+    });
+
+  });
+</script>
+
+<script>
+  wow = new WOW({
+    animateClass: 'animated',
+    offset: 100
+  });
+  wow.init();
+</script>
+
+
+<script type="text/javascript">
+  $(window).load(function() {
+
+    $('.main-nav li a, .servicelink').bind('click', function(event) {
+      var $anchor = $(this);
+
+      $('html, body').stop().animate({
+        scrollTop: $($anchor.attr('href')).offset().top - 102
+      }, 1500, 'easeInOutExpo');
+      /*
+      if you don't want to use the easing effects:
+      $('html, body').stop().animate({
+        scrollTop: $($anchor.attr('href')).offset().top
+      }, 1000);
+      */
+      if ($(window).width() < 768) {
+        $('.main-nav').hide();
+      }
+      event.preventDefault();
+    });
+  })
+</script>
+
+<script type="text/javascript">
+  $(window).load(function() {
+
+
+    var $container = $('.portfolioContainer'),
+      $body = $('body'),
+      colW = 375,
+      columns = null;
+
+
+    $container.isotope({
+      // disable window resizing
+      resizable: true,
+      masonry: {
+        columnWidth: colW
+      }
+    });
+
+    $(window).smartresize(function() {
+      // check if columns has changed
+      var currentColumns = Math.floor(($body.width() - 30) / colW);
+      if (currentColumns !== columns) {
+        // set new column count
+        columns = currentColumns;
+        // apply width to container manually, then trigger relayout
+        $container.width(columns * colW)
+          .isotope('reLayout');
+      }
+
+    }).smartresize(); // trigger resize to set container width
+    $('.portfolioFilter a').click(function() {
+      $('.portfolioFilter .current').removeClass('current');
+      $(this).addClass('current');
+
+      var selector = $(this).attr('data-filter');
+      $container.isotope({
+
+        filter: selector,
+      });
+      return false;
+    });
+
+  });
+</script>
 
 </body>
 
