--- a/about.html
+++ b/about.html
@@ -1,15 +1,38 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>About Sustainabilitea</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+<!doctype html>
+<html>
 
-  </head>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, maximum-scale=1">
+
+	<title>About Page</title>
+  <link rel="icon" href="https://github.com/deslyntka/group_project/blob/master/SUSTAINABILITEA.png?raw=true" type="url">
+	<link rel="shortcut icon" href="https://github.com/deslyntka/group_project/blob/master/SUSTAINABILITEA.png?raw=true" type="url">
+
+	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,800italic,700italic,600italic,400italic,300italic,800,700,600' rel='stylesheet' type='text/css'>
+
+	<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+	<link href="css/style.css" rel="stylesheet" type="text/css">
+	<link href="css/font-awesome.css" rel="stylesheet" type="text/css">
+	<link href="css/responsive.css" rel="stylesheet" type="text/css">
+	<link href="css/magnific-popup.css" rel="stylesheet" type="text/css">
+	<link href="css/animate.css" rel="stylesheet" type="text/css">
+
+	<script type="text/javascript" src="js/jquery.1.8.3.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.js"></script>
+	<script type="text/javascript" src="js/jquery-scrolltofixed.js"></script>
+	<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
+	<script type="text/javascript" src="js/jquery.isotope.js"></script>
+	<script type="text/javascript" src="js/wow.js"></script>
+	<script type="text/javascript" src="js/classie.js"></script>
+	<script type="text/javascript" src="js/magnific-popup.js"></script>
+
+
+
+</head>
+
+
 
   <body>
 
@@ -19,7 +42,7 @@
   		<!--main-nav-start-->
   		<div class="container">
   			<ul class="main-nav">
-  				<li><a href="#header">Home</a></li>
+  				<li><a href="file:///Users/rachaelwhite/Downloads/Knight%203/index.html">Home</a></li>
   				<li><a href="#fastfashion">About</a></li>
   				<li><a href="#service">Fast Fashion?</a></li>
   				<li class="small-logo"><a href="#header"><img src="https://github.com/deslyntka/group_project/blob/master/SUSTAINABILITEA.png?raw=true" alt="" width="75" height="75"></a></li>
@@ -55,4 +78,105 @@
 
 </div>
   </body>
+</html>
+
+
+
+<script type="text/javascript">
+  $(document).ready(function(e) {
+
+    $('#test').scrollToFixed();
+    $('.res-nav_click').click(function() {
+      $('.main-nav').slideToggle();
+      return false
+
+    });
+
+    $('.Portfolio-box').magnificPopup({
+      delegate: 'a',
+      type: 'image'
+    });
+
+  });
+</script>
+
+<script>
+  wow = new WOW({
+    animateClass: 'animated',
+    offset: 100
+  });
+  wow.init();
+</script>
+
+
+<script type="text/javascript">
+  $(window).load(function() {
+
+    $('.main-nav li a, .servicelink').bind('click', function(event) {
+      var $anchor = $(this);
+
+      $('html, body').stop().animate({
+        scrollTop: $($anchor.attr('href')).offset().top - 102
+      }, 1500, 'easeInOutExpo');
+      /*
+      if you don't want to use the easing effects:
+      $('html, body').stop().animate({
+        scrollTop: $($anchor.attr('href')).offset().top
+      }, 1000);
+      */
+      if ($(window).width() < 768) {
+        $('.main-nav').hide();
+      }
+      event.preventDefault();
+    });
+  })
+</script>
+
+<script type="text/javascript">
+  $(window).load(function() {
+
+
+    var $container = $('.portfolioContainer'),
+      $body = $('body'),
+      colW = 375,
+      columns = null;
+
+
+    $container.isotope({
+      // disable window resizing
+      resizable: true,
+      masonry: {
+        columnWidth: colW
+      }
+    });
+
+    $(window).smartresize(function() {
+      // check if columns has changed
+      var currentColumns = Math.floor(($body.width() - 30) / colW);
+      if (currentColumns !== columns) {
+        // set new column count
+        columns = currentColumns;
+        // apply width to container manually, then trigger relayout
+        $container.width(columns * colW)
+          .isotope('reLayout');
+      }
+
+    }).smartresize(); // trigger resize to set container width
+    $('.portfolioFilter a').click(function() {
+      $('.portfolioFilter .current').removeClass('current');
+      $(this).addClass('current');
+
+      var selector = $(this).attr('data-filter');
+      $container.isotope({
+
+        filter: selector,
+      });
+      return false;
+    });
+
+  });
+</script>
+
+</body>
+
 </html>
