--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
 
 <body>
 	<header class="header" id="header">
-		<!--header-start-->
-		<div class="container">
-			<html>
-</html>
-			<a class="link animated fadeInUp delay-1s servicelink" href="#service">Welcome</a>
-		</div>
-	</header>
-	<!--header-end-->
+			<!--header-start-->
+			<div class="container">
+				<figure class="logo animated fadeInDown delay-07s">
+					<a href="#"><img src="img/logo.png" alt=""></a>
+				</figure>
+				<a class="link animated fadeInUp delay-1s servicelink" href="#service">Welcome</a>
+			</div>
+		</header>
 	<nav class="main-nav-outer" id="test">
 		<!--main-nav-start-->
 		<div class="container">
 			<ul class="main-nav">
-				<li><a href="#header">Home</a></li>
+				<li><a href="file:///Users/rachaelwhite/Downloads/Knight%203/index.html">Home</a></li>
 				<li><a href="file:///Users/rachaelwhite/Downloads/Knight%203/about.html">About</a></li>
 				<li><a href="#fastfashion">Fast Fashion?</a></li>
 				<li class="small-logo"><a href="#header"><img src="https://github.com/deslyntka/group_project/blob/master/SUSTAINABILITEA.png?raw=true" alt="" width="75" height="75"></a></li>
