--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
 				</figure>
 				<div class="col-lg-7 col-sm-8 featured-work">
 					<h2>Fast Fashion</h2>
-					<P class="padding-b">Over the course of the last 20 years the way people buy, wear and discard clothing has changed dramatically. Companies like H&M, Zara, Target and dozens of businesses are behind a wave of unsustainable and oft times unethical new trend of “fast fashion”. Defined as “inexpensive clothing produced rapidly by mass-market retailers in response to the latest trends.” </P>
+					<P class="padding-b">Over the course of the last 20 years, the way people buy, wear and discard clothing has changed dramatically. Companies like H&M, Zara, Target and dozens of other businesses are behind a wave of unsustainable and often unethical new trend of “fast fashion”. </P>
 					<div class="featured-box">
 						<div class="featured-box-col1 wow fadeInRight delay-02s">
 							<i class="fa fa-globe"></i>
 						</div>
 						<div class="featured-box-col2 wow fadeInRight delay-02s">
 							<h3>What is Fast Fashion?</h3>
-							<p>Defined as “inexpensive clothing produced rapidly by mass-market retailers in response to the latest trends.” Fast fashion is controverersial for many reasons.   Global transport and shipping costs very low and buyers in countries like the United States and the Uk are purchasing more clothing then ever before. </p>
+							<p>Defined as “inexpensive clothing produced rapidly by mass-market retailers in response to the latest trends.” Fast fashion is controverersial for many reasons.   Global transport and shipping costs very low and buyers in countries like the United States and the UK are purchasing more clothing than ever before. </p>
 						</div>
 					</div>
 					<div class="featured-box">
@@ -83,7 +83,7 @@
 							<i class="fa fa-gbp"></i>
 						</div>
 						<div class="featured-box-col2 wow fadeInRight delay-04s">
-							<p>Typically much cheaper then higher end designers, mass retailers offer buyers a varying selection of styles and are able to keep up with the changing trends by sourcing their manufacturing from low median income countries like Bangladesh or China. This insures that the cost of each individual garment will remain low once it reaches the marketplace. </p>
+							<p>Typically much cheaper than higher end designers, mass retailers offer buyers a varying selection of styles and are able to keep up with the changing trends by sourcing their manufacturing from low median income countries like Bangladesh or China. This insures that the cost of each individual garment will remain low once it reaches the marketplace. </p>
 						</div>
 					</div>
 					<div class="featured-box">
@@ -136,7 +136,7 @@
 							<div class="text-center">
 						</div>
 						<div class=text-justify>
-							<p>Fast fashion garments are produced in high quantities and at cheap prices. This means that they are easily replaceable. Waste from the high fashion industry is often overlooked by the consumer. In 2015 the average American disposed of 80lbs of clothing. In the United Kingdom, the average person disposed 26 kilograms of clothing annually. American citizens throw away more clothing every year then any country in the world and the United Kingdom tosses more fat fashion into the trash then any country in Europe. </p>
+							<p>Fast fashion garments are produced in high quantities and at cheap prices. This means that they are easily replaceable. Waste from the high fashion industry is often overlooked by the consumer. In 2015 the average American disposed of 80lbs of clothing. In the United Kingdom, the average person disposes 26 kilograms of clothing annually. American citizens throw away more clothing every year than any country in the world and the United Kingdom tosses more fast fashion into the trash than any country in Europe. </p>
 						</div>
 						</div>
 					</div>
@@ -187,7 +187,7 @@
 						</div>
 						<div class="featured-box-col2 wow fadeInRight delay-04s">
 							<h3>Children</h3>
-							<p>While most countries around the world prohibit children from working in factories, many of these countries are able to bypass this. ‘Sweatshops’ are factories where children are often forced to work to support their families. The clothing chain and garment industry is a very complex system as many of the clothing makers do not know where the source of their material is coming from. Children are often separated from their homes and trafficked and forced into labor, picking cotton to make into textiles that will be used to create clothing.</p>
+							<p>While most countries around the world prohibit children from working in factories, many of these countries are able to bypass this. ‘Sweatshops’ are factories where children are often forced to work to support their families. The clothing chain and garment industry is a very complex system as many of the clothing makers do not know where the source of their material is coming from. Children are often separated from their homes and trafficked and forced into labour, picking cotton to make into textiles that will be used to create clothing.</p>
 						</div>
 					</div>
 					<div class="featured-box">
