--- a/about.html
+++ b/about.html
@@ -43,12 +43,11 @@
   		<div class="container">
   			<ul class="main-nav">
   				<li><a href="file:///Users/rachaelwhite/Downloads/Knight%203/index.html">Home</a></li>
-  				<li><a href="#fastfashion">About</a></li>
-  				<li><a href="#service">Fast Fashion?</a></li>
+  				<li><a href="file:///Users/rachaelwhite/Downloads/Knight%203/index.html">About</a></li>
+  				<li><a href="#file:///Users/rachaelwhite/Downloads/Knight%203/index.html">Fast Fashion?</a></li>
   				<li class="small-logo"><a href="#header"><img src="https://github.com/deslyntka/group_project/blob/master/SUSTAINABILITEA.png?raw=true" alt="" width="75" height="75"></a></li>
-  				<li><a href="#effects">Sustainable Fashion</a></li>
-  				<li><a href="#team">Find Brands</a></li>
-  				<li><a href="#contact">Contact</a></li>
+  				<li><a href="#file:///Users/rachaelwhite/Downloads/Knight%203/index.html">Sustainable Fashion</a></li>
+  				<li><a href="#file:///Users/rachaelwhite/Downloads/Knight%203/index.html">Find Brands</a></li>
   			</ul>
   			<a class="res-nav_click" href="#"><i class="fa fa-bars"></i></a>
   		</div>
